# autoencoders

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  pytest.toml
docs_gpt/: APPROACH_COMPARISON.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  COMPLETE_INTEGRATION.md  FILE_INVENTORY.md  FILE_INVENTORY_DETAILED.md  INTEGRATION_PLAN.md  INTEGRATION_SUMMARY.md  MODULARIZATION_PLAN.md  PLAN_INDEX.md  PLAN_README.md  PLAN_SUMMARY.md  PUBLIC_APIS.md  QUICK_REFERENCE.md  README.md  README_INTEGRATION.md  README_v0.2.0.md  TESTING.md
docs_gpt/old/: ARCHITECTURE_DIAGRAMS.md  INTEGRATION_PLAN.md  INTEGRATION_SUMMARY.md  MIGRATION_GUIDE.md  QUICK_REFERENCE.md  README_INTEGRATION.md
src/ae/: __init__.py  spatial.py  train.py
src/ae/models/: __init__.py  mnist.py  spatial.py
src/ae/modules/: __init__.py  act.py  ae.py  normalization.py  patch_att.py  shuffle.py  siren.py  skip.py  spatial.py
src/autoencoders/: __init__.py  data.py  lightning_autoencoder.py  train.py  trainer.py
src/autoencoders.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/autoencoders/conf/: config.yaml
src/autoencoders/datamodules/: __init__.py  aesthetic4k.py  cache.py  fashion_mnist.py  forced_turbulence.py  qg_turbulence.py  rpn_encoder.py  rpn_textvision.py  rpn_turbulence.py  singlestep_forced_turbulence.py  timeseries.py  timeseries_decaying_qg_turbulence.py  timeseries_delay_2d.py  timeseries_forced_turbulence.py
src/autoencoders/metrics/: conditional_image_diffusion.py  image_diffusion.py  text.py  vlm_image_diffusion.py
src/autoencoders/models/: conv_autoencoder.py  cu.py  mnist.py  readme.md  spatial.py  spatial_diffusion.py  tiny_cu.py  tiny_hl.py
src/autoencoders/util/: gitinfo.py  llm.py  sec_id.py
src/autoencoders/utils/: paths.py
src/deploy/: hpc_deploy.py  push_to_deploy.py  slurm_template.sh
src/install/: cuda-13-compat.sh  fetch_aesthetic4k.py  ffmpeg-libx264-compat.sh  get_aesthetic4k_sample.py  install_packages.sh  module.sh  package_requirements.txt  requirements.txt  requirements_client.txt
src/user/: config.yaml
src/workspace/: __init__.py  train.py
src/workspace.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/workspace/conf/: config.yaml
src/workspace/datamodules/: __init__.py  cache.py  rpn_encoder.py  (+6 more)
tests/: conftest.py  test_autoencoders_registry.py
tests/benchmarks/: test_aesthetic4k.py
(+134 files in other folders)
