[project]
name = "workspace"
version = "0.3.0"
description = "ML workspace with experiments and training infrastructure"
authors = [
    {name = "Akhil Sadam", email = "sadam.akhil@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = [
    "setuptools>=69",
    "wheel",
    "uv",
    "packaging"
]
build-backend = "setuptools.build_meta"

[tool.hatch.metadata] 
allow-direct-references = true

[tool.pytest]
python_files = ["*.py"]
python_classes = ["_TEST_*"]
python_functions = ["_test_*"]

# [tool.uv.workspace]
# members = ["packages/*"]

[tool.uv.extra-build-dependencies]
causal-conv1d = ["packaging"]

# [tool.setuptools.dynamic]
# dependencies = { file = ["src/install/requirements.txt"] }
